--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
   "scripts": {
     "preinstall": "node tools/scripts/preinstall",
     "clean": "babel-node tools/scripts/clean",
-    "development": "babel-node tools/development",
+    "dev": "babel-node tools/development",
     "build": "babel-node tools/scripts/build",
     "analyze": "babel-node tools/scripts/analyze",
     "start": "node build/server",
     "deploy": "babel-node tools/scripts/deploy",
-    "lint": "eslint src",
-    "flow": "babel-node tools/scripts/flow",
-    "flow:defs": "flow-typed install --overwrite",
-    "flow:report": "flow-coverage-report -i 'src/**/*.js' -t html -t json -t text",
-    "flow:remove": "babel-node tools/scripts/removeFlow && rimraf tools/scripts/removeFlow.js"
+    "lint": "esw -c .eslintrc ./src ./tools ./test --ext '.js, .jsx' --color",
+    "lint:f": "esw -c .eslintrc ./src ./tools ./test --ext '.js, .jsx' --color --fix",
+    "lint:w": "esw -c .eslintrc ./src ./tools ./test --ext '.js, .jsx' --color -w",
+    "lint:s": "sass-lint -c .sass-lint.yml -v -q"
   },
   "repository": {
     "type": "git",
@@ -32,20 +31,6 @@
     "javascript",
     "express",
     "webpack"
-  ],
-  "contributors": [
-    "Alin Porumb",
-    "Benjamin Kniffler <bkniffler@me.com>",
-    "Carson Perrotti <carsonperrotti@gmail.com>",
-    "Christian Glombek <christian.glombek@rwth-aachen.de>",
-    "Christoph Werner",
-    "David Edmondson",
-    "Evgeny Boxer",
-    "Joe Kohlmann <kohlmannj@mac.com>",
-    "Lucian Lature <lucian.lature@gmail.com>",
-    "Steven Enten <steven@enten.fr>",
-    "Sean Matheson <sean@ctrlplusb.com>",
-    "Steven Truesdell <steven@strues.io>"
   ],
   "license": "MIT",
   "bugs": {
@@ -88,17 +73,14 @@
     "chokidar": "1.6.1",
     "css-loader": "0.26.1",
     "eslint": "3.12.2",
-    "eslint-config-airbnb": "13.0.0",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-flowtype": "2.29.1",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.8.0",
+    "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "0.9.0",
-    "flow-bin": "0.37.4",
-    "flow-coverage-report": "0.2.0",
-    "flow-remove-types": "1.1.2",
-    "flow-typed": "2.0.0",
     "glob": "7.1.1",
     "happypack": "3.0.1",
     "html-webpack-plugin": "2.24.1",
