--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=6"
   },
   "scripts": {
+    "david": "david",
     "preinstall": "node tools/scripts/preinstall",
     "clean": "babel-node tools/scripts/clean",
     "dev": "babel-node tools/development",
@@ -43,7 +44,7 @@
     "colors": "1.1.2",
     "compression": "1.6.2",
     "dotenv": "2.0.0",
-    "express": "4.14.0",
+    "express": "^5.0.0-alpha.2",
     "helmet": "3.2.0",
     "hpp": "0.2.1",
     "normalize.css": "5.0.0",
@@ -53,8 +54,7 @@
     "react-helmet": "3.2.3",
     "react-router": "4.0.0-alpha.6",
     "serialize-javascript": "1.3.0",
-    "source-map-support": "0.4.7",
-    "user-home": "2.0.0",
+    "source-map-support": "^0.4.8",
     "uuid": "3.0.1"
   },
   "devDependencies": {
@@ -72,6 +72,7 @@
     "babel-template": "6.16.0",
     "chokidar": "1.6.1",
     "css-loader": "0.26.1",
+    "david": "^9.0.0",
     "eslint": "3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-flowtype": "2.29.1",
@@ -92,7 +93,7 @@
     "rimraf": "2.5.4",
     "semver": "5.3.0",
     "style-loader": "0.13.1",
-    "webpack": "2.2.0-rc.1",
+    "webpack": "2.2.0-rc.2",
     "webpack-bundle-analyzer": "2.2.1",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "2.14.0",
