--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "babel-core": "6.21.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-display-name": "^6.8.0",
     "babel-plugin-transform-react-jsx-self": "6.11.0",
     "babel-plugin-transform-react-jsx-source": "6.9.0",
     "babel-preset-env": "1.1.4",
@@ -75,7 +77,6 @@
     "david": "^9.0.0",
     "eslint": "3.12.2",
     "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-flowtype": "2.29.1",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.8.0",
