--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "3.5.0",
+    "autoprefixer": "^6.6.0",
     "babel-cli": "6.18.0",
     "babel-core": "6.21.0",
     "babel-eslint": "7.1.1",
@@ -93,9 +94,20 @@
     "match-require": "2.0.0",
     "md5": "2.2.1",
     "node-notifier": "4.6.1",
+    "node-sass": "4.1.1",
+    "postcss": "^5.2.6",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-fixes": "^1.4.2",
+    "postcss-flexbugs-fixes": "^2.1.0",
+    "postcss-import": "^9.0.0",
+    "postcss-load-config": "^1.0.0",
+    "postcss-loader": "^1.2.0",
+    "postcss-scss": "^0.4.0",
+    "postcss-simple-vars": "^3.0.0",
     "react-hot-loader": "3.0.0-beta.6",
     "regenerator-runtime": "0.10.1",
     "rimraf": "2.5.4",
+    "sass-loader": "^4.0.2",
     "semver": "5.3.0",
     "style-loader": "0.13.1",
     "webpack": "2.2.0-rc.2",
