--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "app-root-dir": "1.0.2",
     "axios": "0.15.3",
+    "classnames": "^2.2.5",
     "code-split-component": "2.0.0-alpha.5",
     "colors": "1.1.2",
     "compression": "1.6.2",
