--- a/package.json
+++ b/package.json
@@ -20,7 +20,23 @@
     "lint:w": "esw -c .eslintrc ./src ./tools ./test --ext '.js, .jsx' --color -w",
     "lint:s": "sass-lint -c .sass-lint.yml -v -q",
     "jest": "jest --config ./jest.json",
-    "j:u": "jest --config ./jest.json -u"
+    "j:u": "jest --config ./jest.json -u",
+    "coverage": "npm run coverage:clean && npm run coverage:build",
+    "coverage:clean": "node tools/scripts/coverageClean.js",
+    "coverage:build": "nyc --all --cache babel-node ./tools/test/webpacklessTestRunner -- headless",
+    "coverage:report": "nyc report --reporter=lcov --reporter=text-summary",
+    "test": "npm run test:nowebpack",
+    "t:w": "npm run test:nowebpack -- w",
+    "test:watch": "npm run test:nowebpack -- w",
+    "test:webpack": "better-npm-run test:webpack",
+    "test:webpack:w": "npm run test:webpack -- w",
+    "test:w:w": "npm run test:webpack -- w",
+    "test:webpack:watch": "npm run test:webpack -- w",
+    "test:webpack:full": "npm run test:webpack -- browsers=Chrome,Safari,Firefox,jsdom",
+    "test:w:f": "npm run test:webpack -- browsers=Chrome,Safari,Firefox,jsdom",
+    "test:nowebpack": "NODE_ENV=test BABEL_ENV=test babel-node ./tools/test/webpacklessTestRunner -- headless",
+    "check": "concurrently --raw \"npm run lint\" \"npm run lint:s\" \"npm run test\" \n npm run jest",
+    "c:w": "concurrently --raw \"npm run lint\" \"npm run lint:s\" \"npm run jest\" && npm run t:w"
   },
   "repository": {
     "type": "git",
@@ -76,7 +92,10 @@
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-3": "6.17.0",
-    "chokidar": "1.6.1",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "chokidar": "^1.6.1",
+    "concurrently": "^3.1.0",
     "css-loader": "0.26.1",
     "david": "^9.0.0",
     "enzyme": "^2.7.0",
@@ -92,12 +111,17 @@
     "glob": "7.1.1",
     "happypack": "3.0.1",
     "html-webpack-plugin": "2.24.1",
+    "icepick": "^1.3.0",
     "jest-cli": "^18.0.0",
+    "jsdom": "^9.9.1",
     "json-loader": "^0.5.4",
+    "karma": "^1.3.0",
     "match-require": "2.0.0",
     "md5": "2.2.1",
+    "mocha": "^3.2.0",
     "node-notifier": "4.6.1",
     "node-sass": "4.1.1",
+    "nyc": "^10.0.0",
     "postcss": "^5.2.6",
     "postcss-cssnext": "^2.9.0",
     "postcss-fixes": "^1.4.2",
@@ -111,8 +135,11 @@
     "react-hot-loader": "3.0.0-beta.6",
     "regenerator-runtime": "0.10.1",
     "rimraf": "2.5.4",
+    "sass-lint": "^1.10.2",
     "sass-loader": "^4.0.2",
     "semver": "5.3.0",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "style-loader": "0.13.1",
     "webpack": "2.2.0-rc.2",
     "webpack-bundle-analyzer": "2.2.1",
