--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A starter kit giving you the minimum requirements for a modern universal react application.",
   "main": "build/server/index.js",
   "engines": {
-    "node": ">=6"
+    "node": "6.9"
   },
   "scripts": {
     "david": "david",
@@ -28,7 +28,7 @@
     "test": "npm run test:nowebpack",
     "t:w": "npm run test:nowebpack -- w",
     "test:watch": "npm run test:nowebpack -- w",
-    "test:webpack": "better-npm-run test:webpack",
+    "test:webpack": "NODE_ENV=test BABEL_ENV=test babel-node ./tools/test/test.entry",
     "test:webpack:w": "npm run test:webpack -- w",
     "test:w:w": "npm run test:webpack -- w",
     "test:webpack:watch": "npm run test:webpack -- w",
@@ -116,11 +116,21 @@
     "jsdom": "^9.9.1",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jsdom-launcher": "^5.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
+    "karma-phantomjs2-launcher": "^0.5.0",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.1",
     "match-require": "2.0.0",
     "md5": "2.2.1",
     "mocha": "^3.2.0",
     "node-notifier": "4.6.1",
     "node-sass": "4.1.1",
+    "null-loader": "^0.1.1",
     "nyc": "^10.0.0",
     "postcss": "^5.2.6",
     "postcss-cssnext": "^2.9.0",
@@ -131,6 +141,7 @@
     "postcss-loader": "^1.2.0",
     "postcss-scss": "^0.4.0",
     "postcss-simple-vars": "^3.0.0",
+    "progress-bar-webpack-plugin": "^1.9.1",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.6",
     "regenerator-runtime": "0.10.1",
