--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "0.9.0",
     "glob": "7.1.1",
-    "happypack": "3.0.1",
+    "happypack": "^3.0.2",
     "html-webpack-plugin": "2.24.1",
     "icepick": "^1.3.0",
     "jest-cli": "^18.0.0",
