--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
   "scripts": {
     "david": "david",
-    "preinstall": "node tools/scripts/preinstall",
-    "clean": "babel-node tools/scripts/clean",
     "dev": "babel-node tools/development",
+    "prebuild": "npm run coverage:clean -- 0",
     "build": "babel-node tools/scripts/build",
     "analyze": "babel-node tools/scripts/analyze",
     "start": "node build/server",
@@ -57,17 +56,16 @@
     "axios": "0.15.3",
     "classnames": "^2.2.5",
     "code-split-component": "2.0.0-alpha.5",
-    "colors": "1.1.2",
     "compression": "1.6.2",
     "dotenv": "2.0.0",
     "express": "^5.0.0-alpha.2",
-    "helmet": "3.2.0",
+    "helmet": "^3.2.0",
     "hpp": "0.2.1",
     "normalize.css": "5.0.0",
     "offline-plugin": "4.5.3",
     "react": "15.4.1",
     "react-dom": "15.4.1",
-    "react-helmet": "3.2.3",
+    "react-helmet": "^3.3.0",
     "react-redux": "5.0.1",
     "react-router": "4.0.0-alpha.6",
     "react-router-addons-routes": "0.0.3",
@@ -92,9 +90,10 @@
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-3": "6.17.0",
-    "chai": "^3.5.0",
+    "chai": "^4.0.0-canary.1",
     "chai-as-promised": "^6.0.0",
     "chokidar": "^1.6.1",
+    "colors": "1.1.2",
     "concurrently": "^3.1.0",
     "css-loader": "0.26.1",
     "david": "^9.0.0",
@@ -131,7 +130,7 @@
     "node-notifier": "4.6.1",
     "node-sass": "4.1.1",
     "null-loader": "^0.1.1",
-    "nyc": "^10.0.0",
+    "nyc": "^10.0.1-candidate.0",
     "postcss": "^5.2.6",
     "postcss-cssnext": "^2.9.0",
     "postcss-fixes": "^1.4.2",
@@ -149,14 +148,15 @@
     "sass-lint": "^1.10.2",
     "sass-loader": "^4.0.2",
     "semver": "5.3.0",
-    "sinon": "^1.17.6",
+    "sinon": "^2.0.0-pre.4",
     "sinon-chai": "^2.8.0",
     "style-loader": "0.13.1",
-    "webpack": "2.2.0-rc.2",
+    "webpack": "2.2.0-rc.3",
     "webpack-bundle-analyzer": "2.2.1",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "2.14.0",
     "webpack-md5-hash": "0.0.5",
-    "webpack-node-externals": "1.5.4"
+    "webpack-node-externals": "1.5.4",
+    "webpack-visualizer-plugin": "^0.1.6"
   }
 }
