--- a/package.json
+++ b/package.json
@@ -63,8 +63,11 @@
     "hpp": "0.2.1",
     "normalize.css": "5.0.0",
     "offline-plugin": "4.5.3",
+    "particles.js": "^2.0.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-grid-layout": "^0.13.9",
+    "react-headroom": "^2.1.3",
     "react-helmet": "^3.3.0",
     "react-redux": "5.0.1",
     "react-router": "4.0.0-alpha.6",
