--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-helmet": "^3.3.0",
     "react-redux": "5.0.1",
     "react-router": "4.0.0-alpha.6",
-    "react-router-addons-routes": "0.0.3",
+    "react-jobs": "0.3.0",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "serialize-javascript": "1.3.0",
